# magnetosphere-energetics

./: .gitignore  BATCH  BATCH.bash  LICENSE  README.md  batchjob_energetics.gl  batchjob_maggrid.gl  cda_wind.py  combo_hdfs.py  energetics.map  error_expedition.py  extract_mpsurface.mcr  extract_mpsurface.py  forward_volume_pass.py  gl-cdiff.py  gl-main.py  gl-satextract.py  glbatch-jobs.bash  hyperwall_vis_main.py  idl2pandas.py  ie_main.py  main.py  makevideo.py  map_main.py  mpsurface_recon.py  multiproc_2d.py  multiproc_ie.py  multiproc_main.py  multiproc_ua.py  multiproc_vis.py  plotSW.py  pltfixer.py  preplot.py  proc_iono_idl.bash  proto_flowlines.py  pv_datacube.py  pv_vis.py  pv_vis_ffj.py  pv_vis_main.py  pv_vis_polarcap.py  (+7 more)
cosmetic/: closed_mp_topRight.sty  closed_topRight.sty  dBn_night_north.sty  daynight_closed.sty  daynight_closed_side.sty  energetics.map  energy_closed2.sty  energy_forward.sty  energy_forward2.sty  ffj_vis.sty  front_iso_Knet.sty  front_iso_status.sty  longtail_Bz.sty  magnetic_bubble.sty  magnetic_field.sty  magnetopause_and_sheath.pvsm  mp_topRight.sty  north_Jr_status.sty  north_eq_Kx.sty  north_pc.sty  north_pc_rxn.sty  north_pc_rxn_busy.sty  north_south_pc.sty  plasmasheet_transparent_closed_mp.sty  plasmasheet_transparent_closed_mp2.sty  ps_jpar.sty  ps_jpar_wiso.sty  ps_kX_topRight.sty  sheath-mp-iso.pvsm  sheath-mp-iso2.pvsm  sheath-mp-iso3.pvsm  simple_vis.sty  south_Jr_status.sty  south_pc.sty  south_pc_rxn.sty  status_forward.sty  stretched_longtail_fieldlines.sty  stretched_ux_plasmasheet.sty  tail_iso_status.sty  (+4 more)
(+130 files in other folders)
